--- a/json_fetcher/package.json
+++ b/json_fetcher/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "ts-node": "^8.9.0"
   }
 }
