--- a/first_app/package.json
+++ b/first_app/package.json
@@ -10,7 +10,10 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/faker": "^4.1.11",
+    "@types/googlemaps": "^3.39.3",
+    "@types/node": "^13.13.4",
     "faker": "^4.1.0"
   }
 }
