--- a/first_app/tsconfig.json
+++ b/first_app/tsconfig.json
@@ -6,7 +6,8 @@
     "outDir": "build"
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "*.env"
   ],
   "include": [
     "src/*"
